2004-08-24  Fred Kiefer <FredKiefer@gmx.de>

	* Source/win32/WIN32Server.m (-windowbounds:): Corrected variable
	name, so the fiel compiles again.
	(-setupRunLoopInputSourcesForMode:): Added new event polling code
	for Cygwin.
	* Source/cairo/CairoContext.m (-NSReadPixel:, beep): Removed methods.
	
2004-08-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-DPScurrentalpha:,
	-DPSsetoffset::): Removed methods.
	* Source/cairo/CairoGState.m (-offset, -setoffset:): Added methods.
	(-forwardInvocation:): Improved output.
	(-GSSetDevice:::) Commented out NSLog calls.
	* Source/gsc/GSGState.m (-_showString:lenght:): Removed this
	method which was a left over from last patch. 
	
2004-08-09 14:38  Alexander Malmberg <alexander@malmberg.org>

	* Source/win32/WIN32Server.m, Source/win32/WIN32ServerEvent.m,
	Headers/win32/WIN32Geometry.h (MSScreenRectToGS, GSScreenRectToMS):
	The 'GS' rect is, in the terminology of NSWindow.h, the window frame,
	not the screen frame. make the conversions match this and update
	the callers.
	* Source/x11/XGServerWindow.m (-_OSFrameToXFrame:for:,
	-_OSFrameToXHints:for:, -_XFrameToOSFrame:for:): Update conversions.
	(-windowdevice:): Remove artificial delays and geometry querying.
	Update based on the frame from the last ConfigureNotify.
	(-placewindow::): Remove event coordinate adjustments. Always send
	move/resize events to -gui right away.

2004-08-03  Fred Kiefer <FredKiefer@gmx.de>

	* Header/cairo/*:
	* Source/cairo/*:
	* Source/GSBackend.m:
	* configure.ac:
	* configure:
	Added cairo backend from Banlu Kemiyatorn <object@gmail.com>.
	
2004-07-30 15:52  Alexander Malmberg <alexander@malmberg.org>

	* Headers/gsc/GSCStateOps.h, Source/gsc/GSContext.m,
	Source/gsc/GSGState.m (-GSReadRect:): New method.

	* Source/art/GNUmakefile: Add ReadRect.m.
	* Source/art/ReadRect.m: New file.
	* Source/art/blit.m, Source/art/blit.h: Add read_pixels_a and
	read_pixels_o. Fix spurious low bits in BLEAN_READ for 16bpp and
	15bpp modes.